add projects section

--- a/index.html
+++ b/index.html
@@ -6,6 +6,15 @@
 	<link rel="stylesheet" href="style.css">
 </head>
 <body>
-	<div id="welcome-section"></div>
+	<div id="welcome-section">
+		<h1>About Me</h1>
+	</div>
+	<div id="projects">
+		<ul id="project-tile">
+			<li>Stock Price Prediction</li>
+			<li>Face Recognition</li>
+			<li>Artificial Life</li>
+		</ul>
+	</div>
 </body>
 </html>
