add link to project

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 	</div>
 	<div id="projects">
 		<ul id="project-tile">
-			<li>Stock Price Prediction</li>
+			<li><a href="https://github.com/shofi384/SafeTrade">Stock Price Prediction</a></li>
 			<li>Face Recognition</li>
 			<li>Artificial Life</li>
 		</ul>
