add navigation bar

--- a/index.html
+++ b/index.html
@@ -6,8 +6,15 @@
 	<link rel="stylesheet" href="style.css">
 </head>
 <body>
+
+	<ul id="navbar">
+		<li><a class="active" href="#welcome-section">Me</a></li>
+		<li><a href="#projects">Projects</a></li>
+	</ul>
+
 	<div id="welcome-section">
-		<h1>About Me</h1>
+		<h1>Shofi</h1>
+		<p>a software developer</p>
 	</div>
 	<div id="projects">
 		<ul id="project-tile">
