--- a/index.html
+++ b/index.html
@@ -7,21 +7,26 @@
 </head>
 <body>
 
-	<ul id="navbar">
-		<li><a class="active" href="#welcome-section">Me</a></li>
-		<li><a href="#projects">Projects</a></li>
-	</ul>
+	<div id="navbar">
+		<a class="navItem" href="#projects">Projects</a>
+		<a class="navItem" href="#welcome-section">Me</a>
+	</div><br>
 
 	<div id="welcome-section">
 		<h1>Shofi</h1>
 		<p>a software developer</p>
 	</div>
 	<div id="projects">
-		<ul id="project-tile">
+		<ul class="project-tile">
 			<li><a href="https://github.com/shofi384/SafeTrade">Stock Price Prediction</a></li>
 			<li>Face Recognition</li>
 			<li>Artificial Life</li>
 		</ul>
 	</div>
+	<footer>
+		<p>copyright@Shofi</p>
+		<p>Contact information: <a href="mailto:shofi384@gmail.com">shofi384@gmail.com</a></p>
+</footer>
+
 </body>
 </html>
