add profile link

--- a/index.html
+++ b/index.html
@@ -23,6 +23,13 @@
 			<li>Artificial Life</li>
 		</ul>
 	</div>
+
+	<div id="social-media">
+		<a href="https://www.linkedin.com/in/shofiqur/"><img class="linkImage" src="link.png" alt="My Linkedin Profile"></a>
+		<a href="https://github.com/shofi384"><img class="linkImage" src="Git.png" alt="My Git Profile"></a>
+		<a id="profile-link" href="https://www.freecodecamp.org/shofi384"><img class="linkImage" src="fcc.jpg" alt="My Freecodecamp Profile"></a>
+	</div>
+
 	<footer>
 		<p>copyright@Shofi</p>
 		<p>Contact information: <a href="mailto:shofi384@gmail.com">shofi384@gmail.com</a></p>
