add navbar and footer property

--- a/index.html
+++ b/index.html
@@ -2,12 +2,14 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Portfolio</title>
 	<link rel="stylesheet" href="style.css">
 </head>
 <body>
 
 	<div id="navbar">
+		<a class="navItem" href="#profiles">Profiles</a>
 		<a class="navItem" href="#projects">Projects</a>
 		<a class="navItem" href="#welcome-section">Me</a>
 	</div><br>
@@ -24,16 +26,13 @@
 		</ul>
 	</div>
 
-	<div id="social-media">
-		<a href="https://www.linkedin.com/in/shofiqur/"><img class="linkImage" src="link.png" alt="My Linkedin Profile"></a>
-		<a href="https://github.com/shofi384"><img class="linkImage" src="Git.png" alt="My Git Profile"></a>
-		<a id="profile-link" href="https://www.freecodecamp.org/shofi384"><img class="linkImage" src="fcc.jpg" alt="My Freecodecamp Profile"></a>
+	<div id="profiles">
+		<a href="https://www.linkedin.com/in/shofiqur/" target="_blank"><img class="linkImage" src="link.png" alt="My Linkedin Profile"></a>
+		<a href="https://github.com/shofi384" target="_blank"><img class="linkImage" src="GitHub-Mark-120px-plus.png" alt="My Git Profile"></a>
+		<a id="profile-link" href="https://www.freecodecamp.org/shofi384" target="_blank"><img class="linkImage" src="fcc.jpg" alt="My Freecodecamp Profile"></a>
 	</div>
 
-	<footer>
-		<p>copyright@Shofi</p>
-		<p>Contact information: <a href="mailto:shofi384@gmail.com">shofi384@gmail.com</a></p>
-</footer>
+	<footer>copyright@Shofi <a href="mailto:shofi384@gmail.com">shofi384@gmail.com</a></footer>
 
 </body>
 </html>
