add media query

--- a/index.html
+++ b/index.html
@@ -18,12 +18,11 @@
 		<h1>Shofi</h1>
 		<p>a software developer</p>
 	</div>
+
 	<div id="projects">
-		<ul class="project-tile">
-			<li><a href="https://github.com/shofi384/SafeTrade">Stock Price Prediction</a></li>
-			<li>Face Recognition</li>
-			<li>Artificial Life</li>
-		</ul>
+		<p class="project-tile"><a href="https://github.com/shofi384/SafeTrade" target="_blank">Stock Price Prediction</a></p>
+		<p>Face Recognition</p>
+		<p>Artificial Life</p>
 	</div>
 
 	<div id="profiles">
